@@ -8,7 +8,8 @@ export("Rdindex",
        "list_files_with_exts", "list_files_with_type", "delimMatch",
        "texi2dvi", "buildVignettes", "pkgVignettes", "pkgDepends",
        "getDepList", "installFoundDepends", "vignetteDepends",
-       "write_PACKAGES", "xgettext", "xgettext2pot", "xngettext")
+       "write_PACKAGES", "xgettext", "xgettext2pot", "xngettext",
+       "encoded_text_to_latex")
 
 export("Rd_db", "Rd_parse", "package.dependencies", "read.00Index")
 
