@@ -127,6 +127,10 @@ NEW FEATURES
 
     o	read.table() now passes 'allowEscapes' to scan().
 
+    o	Functions encoded_text_to_latex() in package tools translates
+	Latin 1,2,9 and UTF-8 encoded character vectors to LaTeX
+	escape sequences where appropriate.
+
 
 DEPRECATED & DEFUNCT
 
